<resources>
    <string name="app_name">Comet</string>
    <string name="app_title">Comet Sample Code</string>
    <string name="splash_app_name">Comet Sample Code</string>
    <string name="main_activity_text">Open navigation view to see samples</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Seung Han Kim</string>
    <string name="nav_header_subtitle">ccomett@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="all_confirm">Confirm</string>
    <string name="all_login">Log In</string>
    <string name="all_logout">Log Out</string>
    <string name="all_email">Email</string>
    <string name="all_password">Password</string>
    <string name="all_success">Success!</string>
    <string name="all_sorry">Sorry!</string>
    <string name="network_not_connected">Network is not connected.</string>
    <string name="network_connected">Network is connected.</string>
    <string name="lr_login_main_title">Log In</string>
    <string name="lr_login_sub_title">Log In to your account</string>
    <string name="login_success_msg">Your account logged in success.</string>
    <string name="login_fail_already_logged_in">Your account is already logged in.</string>
    <string name="login_fail_wrong_auth_code">Wrong authentication code.</string>
    <string name="login_fail_check_id_pwd">Please check your email or password.</string>
    <string name="login_fail_not_found_token">Can not found access token.</string>
    <string name="login_fail_unknown">Log in failed by unknown issue.</string>
    <string name="back_again">Press back button again to exit.</string>
    <string name="weather_detail_title">Daily Weather Detail</string>
    <string name="image_viewer_title">Image Viewer</string>
    <string name="user_broadcast_received">User broadcast received!</string>
    <string name="send_broadcast_text">Send User Broadcast</string>
    <string name="capture_photo_text">Capture Photo</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="permission_camera">This app needs camera permission to scan barcode</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="grant">GRANT</string>
    <string name="all_cancel">CANCEL</string>
    <string name="all_wait">Please wait...</string>
    <string name="your_token">This is your koken</string>
</resources>
